# Tangible-Office-UI

./: .gitignore  README.ja.md  README.md  README.zh-CN.md  SKILL.md  app.py  main.py  pyproject.toml  requirements.txt  set_state.py
scripts/: __init__.py  set_state.py
toio_app/: __init__.py  behavior.py  compat.py  config.py  connection.py  pose.py  runner.py  state.py
